<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Cleanner</string>
    <string name="short_cut_name">Speed Up</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_memory_clean">Mem Speed Up</string>
    <string name="app_rublish_clean">Clean up</string>
    <string name="app_autostart_manage">Auto start manage</string>
    <string name="app_software_manage">Software Manage</string>
    <string name="cleaned">Clean up %1$s m</string>
    <string name="empty_cache">Cache is empty.</string>
    <string name="scanning">Scan…</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>
    <string name="software_top_text">Installed %1$s ,Used %2$s</string>


    <string name="category_other">Other</string>
    <string name="category_def">Custom Setting</string>
    <string name="settings_basic">Basic Setting</string>
    <string name="category_advanced">Advance Setting</string>
    <string name="settings_about">About</string>
    <string name="settings_version_update">Check update</string>
    <string name="settings_grade">Rate me 5 stars</string>
    <string name="settings_share">Share to friends</string>

    <string name="title_settings">Setting</string>
    <string name="app_information">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;\
        Help you clean your phone!</string>
    <string name="all_rights_reserved"></string>
</resources>