<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_def">
        <Preference
            android:key="createShortCut"
            android:title="Create shortcut" />
        <SwitchPreference
            android:key="powerClear"
            android:title="Strong Clean"
            android:enabled="false"
            android:summary="This need root" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/category_other">
        <Preference
            android:key="pShare"
            android:title="@string/settings_share" />

        <Preference
            android:key="pGrade"
            android:title="@string/settings_grade" />
        <Preference
            android:key="pVersionDetail"
            android:title="Version Info" />
        <Preference
            android:key="pVersion"
            android:title="@string/settings_version_update" />

        <Preference
            android:key="pAbout"
            android:title="@string/settings_about" />
    </PreferenceCategory>

</PreferenceScreen>
